[gd_scene load_steps=3 format=3 uid="uid://bkdsn268g6hx7"]

[ext_resource type="Script" path="res://core/ui/components/partition_card.gd" id="1_phoww"]
[ext_resource type="PackedScene" uid="uid://c71ayw7pcw6u6" path="res://core/ui/components/card_button.tscn" id="2_u5faq"]

[node name="PartitionCard" type="MarginContainer"]
custom_minimum_size = Vector2(200, 120)
offset_right = 200.0
offset_bottom = 100.0
script = ExtResource("1_phoww")

[node name="BackgroundPanel" type="Panel" parent="."]
layout_mode = 2

[node name="EdgeMarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="EdgeMarginContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="EdgeMarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="EdgeMarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="NameLabel" type="Label" parent="EdgeMarginContainer/VBoxContainer/HBoxContainer2/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
text = "/dev/sda1"

[node name="MarginContainer2" type="MarginContainer" parent="EdgeMarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="FilesystemLabel" type="Label" parent="EdgeMarginContainer/VBoxContainer/HBoxContainer2/MarginContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
text = "ext4
"

[node name="MountLabelsContainer" type="HBoxContainer" parent="EdgeMarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="EdgeMarginContainer/VBoxContainer/MountLabelsContainer"]
layout_mode = 2
text = "/home/root
"

[node name="Label2" type="Label" parent="EdgeMarginContainer/VBoxContainer/MountLabelsContainer"]
layout_mode = 2
text = "/var/log
"

[node name="SizeLabel" type="Label" parent="EdgeMarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "1000 Gb"

[node name="HBoxContainer" type="HBoxContainer" parent="EdgeMarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="ButtonsVBox" type="VBoxContainer" parent="EdgeMarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="InstantiateButton" parent="EdgeMarginContainer/VBoxContainer/HBoxContainer/ButtonsVBox" instance=ExtResource("2_u5faq")]
unique_name_in_owner = true
layout_mode = 2
text = "Add to steam"
